tests/NormalTests/paczka1/fuzzy1/76953205.err
Error in line 4: tDJy4 S134 39,5
Error in line 10: S642 A633 46,29
Error in line 16: sYAHf S642 94,2
Error in line 15: S642 A633 36,1
Error in line 19: aX3in6 A633 8,5
Error in line 18: S642 S134 57,9
Error in line 33: OP7zx S13C 100,2
Error in line 27: OP7zx S134 93,6
Error in line 37: OP7zx S642 19,0
